# DrRepo

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  app.py  docker-compose.yml  file-strucutre.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_github.py  test_groq_integration.py  test_markdown.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  tests.yml
docs/: TROUBLESHOOTING.md  api_reference.md  architecture.md  configuration.md  user_guide.md
examples/: advanced_usage.py  agent_outputs_explained.md  basic_usage.py
reports/: RAG-Assistant_report.json  requests_report.json
scripts/: check_components.py  diagnose.py  health_check.py  run_health_api.py  verify_imports.py
src/: __init__.py  main.py
src/agents/: __init__.py  base_agent.py  content_improver.py  fact_checker.py  metadata_recommender.py  repo_analyzer.py  reviewer_critic.py
src/api/: __init__.py  health.py
src/graph/: __init__.py  nodes.py  state.py  workflow.py
src/tools/: __init__.py  base_tool.py  github_tool.py  markdown_tool.py  rag_retriever.py  web_search_tool.py
src/utils/: __init__.py  circuit_breaker.py  config.py  exceptions.py  health_check.py  logger.py  retry.py  validators.py
tests/: __init__.py  conftest.py
tests/test_agents/: test_metadata_recommender.py  test_repo_analyzer.py
tests/test_integration/: test_workflow.py
tests/test_tools/: test_github_tool.py  test_markdown_tool.py  test_web_search_tool.py
tests/test_utils/: test_circuit_breaker.py  test_exceptions.py  test_health_check.py  test_retry.py
