[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drrepo"
version = "1.0.0"
description = "Multi-agent AI system for GitHub repository analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["github", "repository", "analysis", "ai", "langgraph", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langgraph>=0.2.28",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "PyGithub>=2.1.1",
    "tavily-python>=0.5.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.2.0",
    "streamlit>=1.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "flake8>=7.1.0",
    "isort>=5.13.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/DrRepo"
Documentation = "https://github.com/yourusername/DrRepo#readme"
Repository = "https://github.com/yourusername/DrRepo"
Issues = "https://github.com/yourusername/DrRepo/issues"

[project.scripts]
drrepo = "src.main:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
