[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drrepo"
version = "1.0.0"
description = "Multi-agent AI system for GitHub repository analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AK Rahul"}
]
keywords = ["github", "repository", "analysis", "ai", "langgraph", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langgraph>=0.2.28",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.1",
    "langchain-text-splitters>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "groq>=0.9.0",
    "langchain-groq>=0.2.0",
    "PyGithub>=2.1.1",
    "tavily-python>=0.5.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.8.2",
    "streamlit>=1.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=24.8.0",
    "flake8>=7.1.0",
    "isort>=5.13.2",
    "mypy>=1.11.1",
    "pylint>=3.0.0",
    "pre-commit>=3.8.0",
]
gradio = [
    "gradio>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/ak-rahul/DrRepo"
Documentation = "https://github.com/ak-rahul/DrRepo/blob/main/docs"
Repository = "https://github.com/ak-rahul/DrRepo"
Issues = "https://github.com/ak-rahul/DrRepo/issues"

[project.scripts]
drrepo = "src.main:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests (deactivate with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101", "B601"]